clean up text comments

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -107,7 +107,7 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   planet sizes with decreasing stellar mass in agreement with physical models of photoevaporation,
   gas-poor formation, and core-powered mass loss. Although current measurements are
   insufficient to robustly identify any physical model as the dominant formation pathway of the radius valley,
-  we argue that robust inferences may be obtained by \tess{} with $\mathcal{O}(\mathbf{85,000})$
+  we argue that robust inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
   mid-to-late M dwarfs observed with 2 minute cadence.
 \end{abstract}
 
