about to add measured planet bulk densities

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -173,7 +173,7 @@ stellar mass can allude to which process---if any---dominates the evolution of c
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
+  %\includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
   \caption{Empirical distributions of \kepler{} planet radii. Histograms of \kepler{} planet radii
     from \cite{berger18} for planets with host stellar effective temperatures \teff{} $\in [4700,6500]$ K
     (\emph{blue}) and \teff{} $<4700$ K (\emph{red}). The former subset of 2816 planets corresponds to the
@@ -191,8 +191,8 @@ and compile our sample of confirmed planets from each mission.
 In Sect.~\ref{sect:completeness} we derive the transiting planet detection completeness and use those results
 to calculate the occurrence rate of small close-in planets in which the structure of the radius valley around
 low mass stars is resolved (Sect.~\ref{sect:occurrence}). Our results as a function stellar mass are compared to
-model predictions in Sect.~\ref{sect:models}. We conclude 
-with a discussion of our results and its implications in Sect.~\ref{sect:conclusion}.
+model predictions in Sect.~\ref{sect:models}. Sect.~\ref{sect:discussion} presents a discussion of our results
+and its implications with a summary of our main findings being presented in Sect.~\ref{sect:conclusions}.
 
 
 \section{Low Mass Dwarf Stellar Sample} \label{sect:stars}
@@ -255,7 +255,7 @@ $M_s$ is $\sim 5.5$\%.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
+  %\includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
   \caption{Low mass dwarf stellar samples from \kepler{} and \ktwo{.} Distributions of \kepler{} magnitudes,
     effective temperatures, stellar radii, and stellar masses for stars in our final stellar sample from either
     \kepler{} (\emph{blue histogram and markers}) or \ktwo{} (\emph{red histogram and markers}).}
@@ -382,7 +382,7 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/Ndetmap_Msgt0d0_xbin45_ybin27.png}
+  %\includegraphics[width=0.98\hsize]{figures/Ndetmap_Msgt0d0_xbin45_ybin27.png}
   \caption{Empirical population of confirmed close-in planets around low mass stars.
     The distribution of 275 and 53 confirmed planets from \kepler{}
     and \ktwo{} respectively as a function of orbital period, insolation, and planet radius. The two-dimensional maps are
@@ -464,7 +464,7 @@ are shown in Fig.~\ref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
+  %\includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
   \caption{Correlation between the \kepler{} multi-event statistic and transit S/N. The mapping between the MES and
     S/N based on the synthetic planetary signals injected into the \kepler{} pipeline \citep{christiansen15}.
     The number-weighted powerlaw fit (\emph{solid line}) to the correlation differs slightly from a one-to-one relation
@@ -475,7 +475,7 @@ are shown in Fig.~\ref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/senscurves.png}
+  %\includegraphics[width=0.98\hsize]{figures/senscurves.png}
   \caption{Average detection sensitivity for \kepler{} and \ktwo{.} The \emph{solid curves} represent the
     average transiting planet detection sensitivity for the \kepler{} and \ktwo{} stars in our sample as
     a function of the transit S/N (Eq.~\ref{eq:snr}). The shaded regions mark the 16$^{th}$ and 84$^{th}$
@@ -571,7 +571,7 @@ averaged over the index $n$, are shown in Fig.~\ref{fig:sensmap}.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/sensmap.png}
+  %\includegraphics[width=0.98\hsize]{figures/sensmap.png}
   \caption{Average detection sensitivity versus orbital period and planetary radius.
     The detection sensitivity maps averaged over \kepler{} stars (\emph{left panel)} and over \ktwo{} stars
     (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -598,7 +598,7 @@ shown in Fig.~\ref{fig:compmap}.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/compmap.png}
+  %\includegraphics[width=0.98\hsize]{figures/compmap.png}
   \caption{Average completeness versus orbital period and planetary radius.
     Maps of the product of the detection sensitivity and geometric transit probability averaged over \kepler{} stars
     (\emph{left panel)} and over \ktwo{} stars (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -674,7 +674,7 @@ occurrence rate of $2.83\pm 0.36$ planets per star.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.7\hsize]{figures/fmap_Msgt0d0_xbin39_ybin26.png}
+  %\includegraphics[width=.7\hsize]{figures/fmap_Msgt0d0_xbin39_ybin26.png}
   \caption{Planet occurrence rate versus orbital period and planetary radius. The maximum a-posteriori occurrence
     rate map calculated from the population of confirmed planets from \kepler{} (\emph{circles}) and
     \ktwo{} (\emph{diamonds}) around low mass dwarf
@@ -684,7 +684,7 @@ occurrence rate of $2.83\pm 0.36$ planets per star.
   \label{fig:fmap}
 \end{figure*}
 
-The location and slope of the radius valley (i.e. $\text{d}\log{r_p}/\text{d}\log{P})$ are broadly consistent
+The location and slope of the radius valley (i.e. $\text{d}\log{r_p}/\text{d}\log{P})$ appear broadly consistent
 with the valley structure measured from the empirical planet population of FGK stars characterized via
 asteroseismology \citep{vaneylen18}. \cite{wu19} also provided a visual approximation to the location of the
 radius valley around stars with $M_s \in [0.5,0.76]$ M$_{\odot}$ in their \gaia{-}\kepler{} sample. However
@@ -710,7 +710,7 @@ $r_p\lesssim 1$ R$_{\oplus}$ where our detection sensitivity is poor.
   
 \begin{figure*}
   \centering
-  \includegraphics[scale=.8]{figures/rphist_double.png}
+  %\includegraphics[scale=.8]{figures/rphist_double.png}
   \caption{Occurrence rate of planets as a function of size. \emph{Upper panel}:
     histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -797,7 +797,7 @@ to 0.054 R$_{\oplus}$ (i.e. $3.2\sigma \to 2.9\sigma$).
 
 \begin{figure*}
   \centering
-  \includegraphics[scale=.8]{figures/rphist_kruse.png}
+  %\includegraphics[scale=.8]{figures/rphist_kruse.png}
   \caption{Comparison of occurrence rates with and without planet candidates included. \emph{Left panel}:
     same as Fig.~\ref{fig:rphist}. \emph{Right panel}: histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -829,8 +829,8 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.48\hsize]{figures/fmapF_Msgt0d0_xbin39_ybin26_insolation.png}
-  \includegraphics[width=.48\hsize]{figures_tmp/fmapF_martinez/fmapF_martinez001.png}
+  %\includegraphics[width=.48\hsize]{figures/fmapF_Msgt0d0_xbin39_ybin26_insolation.png}
+  %\includegraphics[width=.48\hsize]{figures_tmp/fmapF_martinez/fmapF_martinez001.png}
   \caption{Planet occurrence rates versus insolation and planetary radius around low mass and Sun-like stars.
     \emph{Left panel}: the maximum a-posteriori occurrence
     rate map calculated from the population of confirmed planets from \kepler{} (\emph{circles}) and
@@ -879,7 +879,7 @@ M$_{\odot}$ (i.e. $\sim 62$\% of our confirmed planet sample).
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.98\hsize]{figures/rphist_compMs.png}
+  %\includegraphics[width=.98\hsize]{figures/rphist_compMs.png}
   \caption{2D and 1D planet occurrence rates in various stellar mass bins. \emph{Top panels}: planet occurrence
     rate maps as a function of orbital period and planet radius. \emph{Bottom panels}: distributions of the relative
     planet occurrence rate as a function of planet size. Note the differing occurrence rate scales.
@@ -958,7 +958,7 @@ terrestrial to gaseous planets despite the latter being inherently rare around t
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.85\hsize]{figures/rpvMsFULL_KepK2.png}
+  %\includegraphics[width=0.85\hsize]{figures/rpvMsFULL_KepK2.png}
   \caption{Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
     the occurrence rate-weighted locations of the terrestrial planet peak (\emph{red markers}), the
     radius valley (\emph{black markers}) and the gaseous planet peak (\emph{blue markers})
@@ -1009,12 +1009,12 @@ Fortunately, the model predictions continue to diverge
 with decreasing stellar mass such that measurements of the valley location in decreasing $M_s$ bins may be used to
 rule out the operation of certain physical mechanisms in the low stellar mass regime. Athough the trend of decreasing
 median feature radii with decreasing stellar mass appears to be upheld, the poor counting statistics in the reduced
-$M_s$ bins prevent any signficant inference regarding the relative strength of the competing physical mechanisms.
+$M_s$ bins prevent any significant inference regarding the relative strength of the competing physical mechanisms.
 This problem can only be addressed by increasing the number of mid-to-late M dwarfs in transit surveys and by maximizing
 the detection sensitivity to planets spanning the radius valley.
 
 
-\section{Discussion \& Conclusions} \label{sect:conclusion}
+\section{Discussion} \label{sect:discussion}
 \subsection{Improving constraints on the occurrence rate of small close-in planets orbiting mid-M dwarfs}
 The issue of having insufficient information to distinguish between photoevaporation, core-powered mass loss, and gas-poor
 formation around low mass stars can be addressed with two steps. Firstly, by expanding the low mass stellar sample in 
@@ -1071,7 +1071,7 @@ and could also contribute to occurrence rate measurements. Albeit with a reduced
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
+  %\includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
   \caption{Expected improvement in the measurement precision of the radius valley location with the number of observed
     low mass stars. Measurement precision curves of the upper and lower uncertainties on the location of the radius valley 
     are derived from binomial statistics. These calculations use approximate and expected detection sensitivity
@@ -1172,10 +1172,41 @@ scaling these values by the typical bolometric luminosities of stars in the vari
 Sun-like stars having higher absolute X-ray luminosities which contributes to more efficient clearing of the 
 gap by photoevaporation.
 
+\section{Summary of primary findings} \label{sect:conclusions}
+This study presented calculations of the occurrence rate of small close-in planets orbiting low mass stars
+using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are summarized below.
+
+\begin{itemize}
+\item The radius valley structure in the occurrence rate of small close-in planets,
+  previously resolved around Sun-like
+  stars, is demonstrated to persist around low mass stars (i.e. mid-K to mid-M dwarfs).
+\item The radius valley around low mass stars exhibits a negative slope with insolation unlike 
+  around Sun-like stars whose measured slope is positive. The observed negative slope
+  supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation
+  or core-powered mass loss.
+\item The gaseous planet peak in the bimodal occurrence rates, centered at $\sim 2$ R$_{\oplus}$, effectively
+  vanishes around mid-M dwarfs as terrestrial planets ($\lesssim 1.6$ R$_{\oplus}$) increasingly dominate the
+  planet population towards later spectral types. The relative fraction of terrestrial to gaseous planets increases
+  from $\sim 0.5\pm 0.1 \to 8.5\pm 4.6$ from mid-K to mid-M dwarfs.
+\item The occurrence rate-weighted central radius of each planet peak and the radius valley decrease to smaller
+  sizes with decreasing stellar mass. The slope of the gaseous peak's radius with stellar mass is shown to be
+  twice that of the terrestrial peak radius indicating that the complete planet population in each stellar mass bin
+  tends to converge towards terrestrial planetary core sizes around later spectral types.
+\item Robust inferences to distinguish between various proposed physical mechanisms for the formation of the
+  radius valley are expoected to require $\mathcal{O}(85,000)$ mid-M dwarfs observed with 2 minute cadence with
+  \tess{} or $\mathcal{O}(4700)$ mid-M dwarfs observed with \plato{} based on its expected performance and
+  observing strategy. 
+\end{itemize}
+
+
+
+
 \acknowledgements
 We thank Martin Paegert for his efforts in contributing relevent data to and for his assistance in querying the \tess{}
 CTL database. We also thank Jennifer Winters and Jonathan Irwin for discussions regarding the population of nearby
-M dwarfs.
+M dwarfs. We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
+throughout the early stages of this work. RC was supported by the Natural Sciences and Engineering Research Council of
+Canada and the NASA ??. 
 
 
 \bibliographystyle{apj}
